[package]
name = "checkup"
version = "0.1.1"
authors = [ "Gus Ruben <gusruben@protonmail.com>" ]
edition = "2021"
description = "A simple & sleek utility to detect website changes and build shell pipelines"
keywords = ["shell", "pipeline", "script"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = "0.12.9"
shlex = "1.3.0"
tokio = { version = "1.41.1", features = ["full"] }
